super fussy header alignment fixes and style cleanup

--- a/src/css/helpers/_helpers.scss
+++ b/src/css/helpers/_helpers.scss
@@ -1,5 +1,5 @@
 .coa-text-spacer--vertical:after {
   border-left: 1px solid $coa-color-purple-dark;
   content: " ";
-  margin: 0 $coa-spacing-md-small;
+  margin: 0 $coa-spacing-medium;
 }
